--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     id="bowser-model"
                     scale="7 7 7"
                     animation-mixer="loop: repeat"
-                    gltf-model="#animated-asset"
+                    gltf-model="ultra.glb"
                     class="clickable"
                     gesture-handler
                 ></a-entity>
